-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.5, 5.10.1
-
Windows 10 v.1607 64 bits
Qt Creator 4.6.0
Qt 5.10.1 (MSVC 2015, 32 bit)
MinGW 5.3.0 32bit
-
5624243ae5a59596948ace7e414c4311faac21ef (qt/qtquickcontrols/dev)
FileDialog can't open a remote directory set in 'folder:'. Local directories open without problems. Appears when the app runs, it try to include a third '/' after 'file://' trying to access it as a local directory. If I try navigate into the remote server with FileDialog after it show up, I can access and retrieve the path from a file, for example. When FileDialog navigates to the root from a server, like \\server\, I get some errors in the output, but the shared directories show up.
using 'import Qt.labs.platform' the remote folder show up. The output still grab some errors when accessing \\server\.
For \\host\path
SHCreateItemFromParsingName(file://npp1/C/)) failed (The network path was not found.)
for \\?\\host\path
SHCreateItemFromParsingName(file:///npp1/C)) failed (An attempt was made to reference a token that does not exist.)
- relates to
-
QTBUG-36006 Android: FileDialog doesn't show files
-
- Closed
-