Fix FileDialog not working with UNC paths

Excluded from the Windows build a fixup for QUrl's containing too many
leading '/'. The fixup was applied on calls to setFolder(const QUrl &f).
It was mangling UNC (i.e. network) paths in Windows, causing
QQuickFileDialog to reject them.

The fixup was introduced in: 48c4c010095e851da3e58ac98514e29dff2e1262

Fixes: QTBUG-67932
Change-Id: Iaab98da9f014156c1d763a57b60ecad41be2e77f
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>